--- a/src/component/Homepage/Topbar.css
+++ b/src/component/Homepage/Topbar.css
@@ -10,7 +10,8 @@
 .topbar-body{
     height: 40px;
     display: flex;
-    justify-content: end;position: relative;
+    justify-content: end;
+    position: relative;
     
     
 }
@@ -86,6 +87,7 @@
     align-items: center;
     gap: 5px;
     font-family: Inter;
+    font-size: 14px;
 }
 
 
@@ -98,6 +100,7 @@
     align-items: center;
     gap: 5px;
     font-family: Raleway;
+    font-size: 14px;
 }
 
 .topbar-skype{
@@ -109,5 +112,6 @@
     align-items: center;
     gap: 5px;
     font-family: Raleway;
+    font-size: 14px;
 }
 
