--- a/src/component/serviceoffered/HybridAppDevelopment/success.css
+++ b/src/component/serviceoffered/HybridAppDevelopment/success.css
@@ -1,5 +1,291 @@
 .success-body{
     width: screen;
-    height: 500px;
+    height: static;
     background-color: #ED1C240A;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.success-box{
+    padding-block: 50px;
+    width: 90%;
+    height: static;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+}
+@media (max-width: 1500px) {
+    .success-box {
+        width: 60%;
+    }
+}
+@media (max-width: 1139px) {
+    .success-box {
+        width: 70%;
+    }
+}
+@media (max-width: 1127px) {
+    .success-box {
+        width: 90%;
+    }
+}
+@media (max-width: 760px) {
+    .success-box {
+        width: 80%;
+    }
+}
+
+.success-header{
+    width: 85%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Raleway;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 50.8px;
+    letter-spacing: 0%;
+    text-align: center;
+    
+
+}
+.success-header1{
+    color: #303030;
+}
+.success-header1 span{
+    color: #ED1C24;
+}
+
+.success-content{
+    width: 1360px;
+    height: static;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+@media (max-width:1500px){
+    .success-content{
+        width: 100%;
+    }
+}
+
+/* content 1 start */
+.success-content1{
+        height: 350px;
+        width: 335px;
+}
+
+.success-content1-top{
+height: 50%;
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+
+
+
+}
+.success-content1-top-image{
+    width: 50%;
+    height: 100%;
+    background-color: #FFFFFF;
+    box-shadow: 0px 4px 16px 0px #00000040;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.success-content1-top-image:hover{
+    border: 2px solid red;
+    transform: scale(1.05);
+    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.15);
+    
+}
+.success-content1-top-image img{
+    width: 40%;
+    height: 45%;
+}
+
+
+.success-content1-bottom{
+    height: 50%;
+    width: 340px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.success-content1-bottom-header{
+    width: 314px;
+    height: 23px;
+    color: #ED1C24;
+    font-family: Raleway;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23.48px;
+    letter-spacing: 0%;
+}
+
+.success-content1-bottom-footer{
+    width: 333px;
+height: 48px;
+font-family: Raleway;
+font-weight: 500;
+font-size: 14px;
+line-height: 16.44px;
+letter-spacing: 0%;
+color:#303030B2;
+}
+
+/* content 1 end */
+
+/* content 1 start inverse */
+
+.success-content2{
+    height: 350px;
+    width: 335px;
+}
+
+.success-content2-top{
+height: 50%;
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+
+
+
+}
+.success-content2-top-image{
+width: 50%;
+height: 100%;
+background-color: #FFFFFF;
+box-shadow: 0px 4px 16px 0px #00000040;
+border-radius: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+
+}
+
+.success-content2-top-image:hover{
+    border: 2px solid red;
+    transform: scale(1.05);
+    box-shadow: 0 6px 30px rgba(0, 0, 0, 0.15);
+    
+}
+.success-content2-top-image img{
+width: 40%;
+height: 45%;
+}
+
+
+.success-content2-top-image img{
+    width: 40%;
+    height: 45%;
+}
+
+.success-content2-bottom{
+height: 50%;
+width: 340px;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+gap: 20px;
+}
+
+.success-content2-bottom-header{
+width: 314px;
+height: 23px;
+color: #ED1C24;
+font-family: Raleway;
+font-weight: 700;
+font-size: 20px;
+line-height: 23.48px;
+letter-spacing: 0%;
+}
+
+.success-content2-bottom-footer{
+width: 333px;
+height: 48px;
+font-family: Raleway;
+font-weight: 500;
+font-size: 14px;
+line-height: 16.44px;
+letter-spacing: 0%;
+color:#303030B2;
+}
+
+/* content 1 end inverse */
+
+@media (max-width: 760px) {
+    .success-content2 {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+}
+
+
+
+
+.line1{
+    width: 220px;
+    height: 2px;
+    background-color: #30303050;
+    position: absolute;
+    z-index: 10000000000;
+    transform: translate(-335px, -20px) rotate(30deg);
+}
+@media (max-width: 1500px) {
+    .line1 {
+        transform: translate(10px, -200px) rotate(30deg);
+    }
+}
+@media (max-width: 760px) {
+    .line1, .line2, .line3 {
+        display: none;
+    }
+}
+
+.line2{
+    width: 220px;
+    height: 2px;
+    background-color: #30303050;
+    position: absolute;
+    z-index: 10000000000;
+    transform: translate(-10px, -20px) rotate(-30deg);
+}
+@media (max-width: 1127px) {
+    .line2 { width: 221px;}
+}
+/* @media (max-width: 760px) {
+    .line2 {
+        display: none;
+    }
+} */
+
+.line3 hr{
+    width: 220px;
+    height: 2px;
+    background-color: #303030;
+    position: absolute;
+    z-index: 10000000000;
+    transform: translate(-105px, -30px) rotate(30deg);
+}
+/* @media (max-width: 760px) {
+    .line3 hr {
+        display: none;
+    }
+} */
