--- a/src/component/serviceoffered/MobileUI/Hero.css
+++ b/src/component/serviceoffered/MobileUI/Hero.css
@@ -1,71 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:display=swap');
 
 .hero-body{
     width: screen;
-    height: 550px;
+    height: 350px;
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
-.hero-body img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
 
 .hero-box{
-    width: 80%;
+    width: 100% !important;
     height: static;
     position: absolute;
 }
 
 .hero-box-heading1{
-    width: 100%;
-    font-family: Montserrat;
+    width: 100% !important;
+    font-family:Roboto !important ;
     font-weight: 800;
     font-size: 48px;
     line-height: 58.51px;
     letter-spacing: 0%;
     color: #ffff;
-}
-@media (max-width:420px){
-    .hero-box-heading1{
-        font-size: 45px;
-    }
-}
-@media (max-width:390px){
-    .hero-box-heading1{
-        font-size: 40px;
-    }
-}
-.hero-box-heading2{
-    width: 720px;
-    font-family: Montserrat;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 21.94px;
-    letter-spacing: 0%;
-    color: #ffff;
-}
-
-@media (max-width:905px){
-    .hero-box-heading2{
-        width: 100%;
-    }
-}
-@media (max-width:870px){
-    .hero-box-heading2{
-        font-size: 16px;
-    }
-}
-@media (max-width:780px){
-    .hero-box-heading2{
-        font-size: 14px;
-    }
-}
-@media (max-width:680px){
-    .hero-box-heading2{
-        font-size: 12px;
-    }
+    text-align: center;
 }
