--- a/src/component/servicewedo/offerings.css
+++ b/src/component/servicewedo/offerings.css
@@ -67,6 +67,10 @@
     }
 }
 
+.offerings-box-header1 span{
+    color: #ED1C24;
+}
+
 .offerings-box-header2{
     width: 75%;
     font-family: Raleway;
