--- a/src/component/serviceoffered/HybridAppDevelopment/Hero.css
+++ b/src/component/serviceoffered/HybridAppDevelopment/Hero.css
@@ -1,28 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap');
 
+.hero-body{
+    width: screen;
+    height: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
 .hero-box{
-    width: 80%;
+    width: 100% !important;
     height: static;
     position: absolute;
 }
 
 .hero-box-heading1{
-    width: 100%;
+    width: 100% !important;
     font-family: Plus Jakarta Sans;
     font-weight: 800;
     font-size: 48px;
     line-height: 58.51px;
     letter-spacing: 0%;
     color: #ffff;
-}
-@media (max-width:420px){
-    .hero-box-heading1{
-        font-size: 45px;
-    }
-}
-@media (max-width:390px){
-    .hero-box-heading1{
-        font-size: 40px;
-    }
+    text-align: center;
 }
