--- a/src/component/Homepage/demo.css
+++ b/src/component/Homepage/demo.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 /* featuredservices start */
 
