--- a/src/component/serviceoffered/MobileUI/Hero.css
+++ b/src/component/serviceoffered/MobileUI/Hero.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 .hero-body{
     width: screen;
