--- a/src/component/serviceoffered/MobileUI/Hero.css
+++ b/src/component/serviceoffered/MobileUI/Hero.css
@@ -28,3 +28,8 @@
     color: #ffff;
     text-align: center;
 }
+
+
+.hero-body img {
+    filter: brightness(0.6); /* Reduce brightness to 70% */
+}
