--- a/src/component/serviceoffered/MobileUI/Tools.css
+++ b/src/component/serviceoffered/MobileUI/Tools.css
@@ -7,6 +7,8 @@
     justify-content: center;
     align-items: center;
     padding-block: 40px;
+
+
 }
 
 .tools-box{
@@ -16,34 +18,37 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 20px;
 }
 
 .tools-header{
     width: 100%;
     height: static;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     text-align: center;
-
     font-family: Raleway;
     font-weight: 700;
     font-size: 36px;
     line-height: 42.26px;
-    letter-spacing: 0%;
+    letter-spacing: 1%;
 }
 
+@media (max-width:475px){
+    .tools-header{
+        width: 70%;
+    }
+}
 .tools-header span{
     color: #ED1C24;
 }
 
 .tools-content{
     width: 100%;
+    height: static;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 120px;
+    flex-wrap: wrap;
 }
 
 .content-box{
@@ -57,15 +62,20 @@
 .box-image{
     width: 180px;
     height: 170px;
+    overflow: hidden;
 }
 
 .box-image img{
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .image2{
-    transform: scale(1.14);
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    transform: scale(1.15);
 }
 .image3{
     transform: scale(1.56);
