--- a/src/component/Homepage/header.css
+++ b/src/component/Homepage/header.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 
 * {
@@ -304,11 +304,11 @@
 
 .navmenu-latest ul li{
     display: inline-block;
-    font-size: 20px;
+    font-size: 18px;
     padding-inline: 20px;
     position: relative;
     transition: color 0.3s ease-in-out;
-    font-family: Roboto;
+    font-family: Plus Jakarta Sans;
 }
 @media (max-width:1750px){
     .navmenu-latest ul li{
@@ -375,7 +375,7 @@
     display: block;
     color: black;
     width:290px;
-    font-size: 22px;
+    font-size: 18px;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
     
@@ -431,7 +431,7 @@
     transition: opacity 0.5s ease-in-out, transform 0.3s ease-in-out, visibility 0.3s;
     position: absolute;
     margin-left: 290px;
-    margin-top: -48px;
+    margin-top: -42px;
     
 }
 
@@ -445,7 +445,6 @@
     text-decoration: none;
     color: inherit;
     font-size: 16px;
-    
 }
 
 
