--- a/src/component/Homepage/header.css
+++ b/src/component/Homepage/header.css
@@ -192,11 +192,22 @@
 
 @media (max-width:1500px){
     .navmenu-latest ul{
-        display: none;
+        display: visible;
     }
 }
 
 @media (max-width:1500px){
+    .navmenu-latest{
+        display: visible;
+    }
+}
+@media (max-width:1301px){
+    .navmenu-latest ul{
+        display: none;
+    }
+}
+
+@media (max-width:1301px){
     .navmenu-latest{
         display: none;
     }
@@ -211,6 +222,11 @@
 }
 
 @media (min-width:1500px){
+    .navmenu-btn{
+        display: none;
+    }
+}
+@media (min-width:1301px){
     .navmenu-btn{
         display: none;
     }
@@ -295,6 +311,7 @@
     list-style: none;
     color:#FFFFFF;
     
+    
 }
 .navmenu-latest ul li a{
     text-decoration: none;
@@ -332,6 +349,11 @@
 @media (max-width:1550px){
     .navmenu-latest ul li{
        font-size: 14px;
+    }
+}
+@media (max-width:1463px){
+    .navmenu-latest ul li{
+       padding-inline: 12px;
     }
 }
 
@@ -589,10 +611,39 @@
 .banner-slider1-content{
     width: 614px;
     height: 434px;
-    margin-top: 200px;
-    margin-left: 150px;
+    margin-top: 220px;
+    margin-left: 380px;
     position: relative;
-
+}
+@media (max-width:1800px){
+    .banner-slider1-content{
+        margin-left: 360px;
+    }
+}
+@media (max-width:1750px){
+    .banner-slider1-content{
+        margin-left: 320px;
+    }
+}
+@media (max-width:1700px){
+    .banner-slider1-content{
+        margin-left: 300px;
+    }
+}
+@media (max-width:1650px){
+    .banner-slider1-content{
+        margin-left: 275px;
+    }
+}
+@media (max-width:1600px){
+    .banner-slider1-content{
+        margin-left: 255px;
+    }
+}
+@media (max-width:1550px){
+    .banner-slider1-content{
+        margin-left: 225px;
+    }
 }
 
 @media (max-width:1200px){
@@ -600,7 +651,7 @@
         width: 500px;
         height: 400px;
         margin-top: 200px;
-        margin-left: 150px;
+        margin-left: 205px;
     }
 }
 
@@ -609,7 +660,37 @@
         width: 450px;
         height: 400px;
         margin-top: 200px;
-        margin-left: 150px;
+        margin-left: 190px;
+        position: relative;
+        
+    }
+}
+@media (max-width:970px){
+    .banner-slider1-content{
+        width: 450px;
+        height: 400px;
+        margin-top: 200px;
+        margin-left: 290px;
+        position: relative;
+        
+    }
+}
+@media (max-width:900px){
+    .banner-slider1-content{
+        width: 450px;
+        height: 400px;
+        margin-top: 200px;
+        margin-left: 250px;
+        position: relative;
+        
+    }
+}
+@media (max-width:850px){
+    .banner-slider1-content{
+        width: 450px;
+        height: 400px;
+        margin-top: 200px;
+        margin-left: 225px;
         position: relative;
         
     }
@@ -621,10 +702,83 @@
         width: 370px;
         height: 400px;
         margin-top: 200px;
-        margin-left: 20px;
+        margin-left: 205px;
       
     }
 }
+@media (max-width:750px){
+    .banner-slider1-content{
+        width: 370px;
+        height: 400px;
+        margin-top: 200px;
+        margin-left: 185px;
+      
+    }
+}
+@media (max-width:700px){
+    .banner-slider1-content{
+        width: 370px;
+        height: 400px;
+        margin-top: 200px;
+        margin-left: 165px;
+      
+    }
+}
+@media (max-width:650px){
+    .banner-slider1-content{
+        width: 370px;
+        height: 400px;
+        margin-top: 200px;
+        margin-left: 145px;
+      
+    }
+}
+@media (max-width:650px){
+    .banner-slider1-content{
+        width: 370px;
+        height: 400px;
+        margin-top: 200px;
+        margin-left: 115px;
+      
+    }
+}
+@media (max-width:540px){
+    .banner-slider1-content{
+        width: 370px;
+        height: 400px;
+        margin-top: 200px;
+        margin-left: 100px;
+      
+    }
+}
+@media (max-width:500px){
+    .banner-slider1-content{
+        width: 370px;
+        height: 400px;
+        margin-top: 200px;
+        margin-left: 65px;
+      
+    }
+}
+@media (max-width:450px){
+    .banner-slider1-content{
+        width: 370px;
+        height: 400px;
+        margin-top: 200px;
+        margin-left: 45px;
+      
+    }
+}
+@media (max-width:400px){
+    .banner-slider1-content{
+        width: 370px;
+        height: 400px;
+        margin-top: 200px;
+        margin-left: 15px;
+      
+    }
+}
+
 
 .banner-slider1-content-text1{
     width: 227px;
@@ -638,8 +792,9 @@ text-underline-position: from-font;
 text-decoration-skip-ink: none;
 color: #FFFFFF;
 text-decoration: underline;
-text-underline-offset: 10px;
+text-underline-offset: 15px;
 position: relative;
+margin-bottom: 40px;
 }
 
 
@@ -715,9 +870,9 @@ position: relative;
     width: 500px;
     height: 24px;
 font-family: Montserrat;
-font-size: 20px;
+font-size: 18px;
 font-weight: 400;
-line-height: 24.38px;
+line-height: 35.38px;
 text-align: left;
 text-underline-position: from-font;
 text-decoration-skip-ink: none;
@@ -759,7 +914,7 @@ position: relative;
     transition: all 0.3s ease-in-out;
     text-transform: uppercase;
     letter-spacing: 1px;
-    margin-top: 100px;
+    margin-top: 160px;
     width: 190px;
     height: 58px;
     position: relative;
@@ -767,14 +922,13 @@ position: relative;
 
 @media (max-width:1200px){
     .banner-slider1-content-btn{
-        margin-top: 50px;
+       
         
     }
 }
 
 @media (max-width:800px){
     .banner-slider1-content-btn{
-        margin-top: 80px;
         
     }
 }
