--- a/src/component/serviceoffered/LogoDesign/ChooseUsLogo.css
+++ b/src/component/serviceoffered/LogoDesign/ChooseUsLogo.css
@@ -12,4 +12,12 @@
     border: 2px solid red;
     width: 70%;
     height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.box1{
+    width: 300px;
 }
