--- a/src/component/serviceoffered/HybridAppDevelopment/solution.css
+++ b/src/component/serviceoffered/HybridAppDevelopment/solution.css
@@ -69,7 +69,8 @@ text-align: center;
     align-items: center;
     position: relative;
     gap: 20px;
-    border-radius: 20px;box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
     
 }
 
