--- a/src/component/Homepage/header.css
+++ b/src/component/Homepage/header.css
@@ -400,6 +400,7 @@
     font-size: 18px;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
+    line-height: 50px;
     
 }
 
