--- a/src/component/serviceoffered/GraphicDesigning/services.css
+++ b/src/component/serviceoffered/GraphicDesigning/services.css
@@ -21,11 +21,7 @@
     gap: 20px;
     flex-wrap: wrap;
 }
-@media (max-width:1280px){
-    .service-box{
-        gap: 20px;
-    }
-}
+
 
 .service-box1{
     width: 100%;
@@ -36,16 +32,7 @@
     gap: 2.5rem;
     flex-wrap: wrap;
 }
-@media (max-width:1307px){
-    .service-box1{
-        width: 70%;
-    }
-}
-@media (max-width:870px){
-    .service-box1{
-        width: 100%;
-    }
-}
+
 
 
 /* heading content start */
@@ -55,20 +42,12 @@
     height: 300px;
 
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     gap: 10px;
 }
 
-@media (max-width:700px){
-    .service-box1-heading{
-        width: 500px;
-    }
-}
-@media (max-width:507px){
-    .service-box1-heading{
-        width: 90%;
-    }
-}
+
 
 .service-box1-heading1{
     width: 80%;
@@ -80,6 +59,12 @@
 }
 
 .service-box1-heading1 span{color: #ED1C24;}
+@media (max-width: 600px) {
+    .service-box1-heading1{
+        text-align: center;
+        width: 100%;
+    }
+}
 
 .service-box1-heading2{
     width: 90%;
@@ -91,6 +76,13 @@
     text-align: justify;
     color: #303030E5;
 
+}
+
+@media (max-width: 600px) {
+    .service-box1-heading2{
+        text-align: center;
+        width: 100%;
+    }
 }
 
 
@@ -117,17 +109,7 @@
     transform: scale(1.1);
 }
 
-@media (max-width: 700px) {
-    .service-box1-content1 {
-        width: 15rem; /* 240px / 16 */
-    }
-}
 
-@media (max-width: 507px) {
-    .service-box1-content1 {
-        width: 90%;
-    }
-}
 
 /* Image container (left-aligned) */
 .content1-image {
@@ -175,9 +157,8 @@
     font-family: Raleway, sans-serif;
     font-weight: 400;
     font-size: 0.875rem; /* 14px / 16 */
-    line-height: 1.12rem; /* 17.9px / 16 */
+    line-height: 1.22rem; /* 17.9px / 16 */
     color: #303030CC;
-    text-align: justify;
 }
 
 /* box1 content end */
@@ -194,16 +175,7 @@
     gap: 2.5rem;
     flex-wrap: wrap;
 }
-@media (max-width:1307px){
-    .service-box2{
-        width: 70%;
-    }
-}
-@media (max-width:870px){
-    .service-box2{
-        width: 100%;
-    }
-}
+
 
 .service-box2-content1{
     width: 15.5rem; /* 248px / 16 */
