--- a/src/component/serviceoffered/GraphicDesigning/about.css
+++ b/src/component/serviceoffered/GraphicDesigning/about.css
@@ -34,20 +34,18 @@
     border-radius: 20px;
 }
 
-@media (max-width: 750px){
-    .About-img{width: 90%;}
+@media (max-width: 700px) {
+    .About-img{
+        width: 90%;
+    }
 }
-@media (max-width: 450px){
-    .About-img{width: 95%;}
-}
+
+
 .About-img img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 20px;
-}
-@media (max-width: 750px){
-    .About-img img{object-fit: contain;}
 }
 
 /* image section end */
@@ -64,14 +62,12 @@
     gap: 20px;
 }
 
-@media (max-width: 750px){
-    .About-content{width: 90%;}
-}
-@media (max-width: 450px){
-    .About-content{width: 95%;}
-}
-@media (max-width: 450px){
-    .About-content{width: 90%;}
+ @media (max-width: 750px){
+    .About-content{
+        width: 90%;
+        text-align: center;
+        align-items: center;
+    }
 }
 
 .About-content-heading{
