--- a/src/component/serviceoffered/GraphicDesigning/ourservices.css
+++ b/src/component/serviceoffered/GraphicDesigning/ourservices.css
@@ -95,10 +95,16 @@
     width: 80%;
     gap: 5%;
 }
+
 .service1{
     height: static;
     width: 48%;
     justify-content: space-between;
+}
+.service1:hover{
+    border: 1px solid #ed1c24;
+    border-radius: 20px;
+    padding: 20px;
 }
 .heading1{
     width: 100%;
@@ -134,6 +140,11 @@
     height: static;
     width: 48%;
     justify-content: space-between;
+}
+.service2:hover{
+    border: 1px solid #ed1c24;
+    border-radius: 20px;
+    padding: 20px;
 }
 
 
