--- a/src/component/serviceoffered/GraphicDesigning/services.css
+++ b/src/component/serviceoffered/GraphicDesigning/services.css
@@ -21,6 +21,16 @@
     gap: 20px;
     flex-wrap: wrap;
 }
+@media (max-width: 1200px) {
+    .service-box{
+        width: 800px;
+    }
+}
+@media (max-width: 820px) {
+    .service-box{
+        width: 100%;
+    }
+}
 
 
 .service-box1{
@@ -97,8 +107,9 @@
     box-shadow: 0.44rem 0.19rem 1.17rem 0px #00000040;
     background: #FFFFFF;
     display: flex;
-    flex-direction: column; /* Stack elements vertically */
-    align-items: flex-start; /* Align items to the left */
+    flex-wrap: wrap;
+    flex-direction: column;  /*Stack elements vertically */
+    align-items: center; /* Align items to the left */
     border-radius: 1.25rem; /* 20px / 16 */
     padding: 1.3rem; /* 10px / 16 */
     transition: 0.3s ease-in-out;
@@ -112,7 +123,7 @@
 
 
 /* Image container (left-aligned) */
-.content1-image {
+.service-box1-content1 .content1-image {
     width: 100%;
     height: 30%;
     display: flex;
@@ -122,14 +133,14 @@
 
 }
 
-.content1-image img {
+.service-box1-content1 .content1-image img {
     width: 54px;
     height: 54px;
     object-fit: contain; /* Ensure image fits properly */
 }
 
 /* Head Section */
-.content1-head {
+.service-box1-content1 .content1-head {
     width: 100%;
      height: 2.5rem; /*19px / 16 */
     display: flex;
@@ -137,7 +148,7 @@
     /* padding-left: 0.5rem; Add left padding for better alignment */
 }
 
-.content1-head p {
+.service-box1-content1 .content1-head p {
     font-family: Raleway, sans-serif;
     font-weight: 700;
     font-size: 1rem; /* 16px / 16 */
@@ -147,13 +158,13 @@
 }
 
 /* Text Section */
-.content1-head1 {
+.service-box1-content1 .content1-head1 {
     width: 12.94rem; /* 223px / 16 */
     height: 8.63rem; /* 90px / 16 */
     /* padding-left: 0.5rem; */
 }
 
-.content1-head1 p {
+.service-box1-content1 .content1-head1 p {
     font-family: Raleway, sans-serif;
     font-weight: 400;
     font-size: 0.875rem; /* 14px / 16 */
