--- a/src/component/Forms/ContactUsForm.css
+++ b/src/component/Forms/ContactUsForm.css
@@ -1,4 +1,7 @@
 .form{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
      margin-top: 4rem;
     padding-bottom: 1rem;
 }
@@ -6,7 +9,21 @@
 
 
 #name{
-   
+    width: 19rem;
+    outline: none;
+    outline: none;
+    border-bottom: 0.1rem solid #CACACA;
+}
+
+#email{
+    width: 19rem;
+    outline: none;
+    outline: none;
+    border-bottom: 0.1rem solid #CACACA;
+}
+
+#phone{
+    width: 19rem;
     outline: none;
     outline: none;
     border-bottom: 0.1rem solid #CACACA;
@@ -52,7 +69,7 @@
      justify-content: center;
 }
 #phone{
-    width: 1/3;
+    width: 4/7;
     outline: none;
     border-bottom: 0.1rem solid #CACACA;
 }
