--- a/src/component/Homepage/developmentprocess.css
+++ b/src/component/Homepage/developmentprocess.css
@@ -5,6 +5,9 @@
     width: screen;
     padding-bottom: 3rem;
    /* border: 2px solid red; */
+   display: flex;
+   flex-direction: column;
+   gap:1rem;
    background-color: #f8f8f8; 
    justify-content: center;
 }
@@ -43,6 +46,9 @@
 }
 .dp-header{
     /* border: 2px solid green; */
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
     width: 65%;
     height: 150px;
     margin-top: 50px;
@@ -184,7 +190,7 @@ text-decoration-skip-ink: none;
     /* border: 2px solid salmon; */
     width: 100%;
     max-width: 1000px;
-    padding-top: 2rem;
+    padding-top: 3rem;
     padding-bottom: 2rem;
     display: flex;
     justify-content: center;
